--- a/lib/assets/html/restaurant/index.html
+++ b/lib/assets/html/restaurant/index.html
@@ -101,6 +101,14 @@
                 </div>
             </div>
 
+            <!-- Available Restaurants -->
+            <div class="mb-8">
+                <h3 class="text-lg font-bold mb-4">Available Restaurants</h3>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6" id="availableRestaurants">
+                    <!-- Restaurant cards will be populated here -->
+                </div>
+            </div>
+
             <!-- Active Orders -->
             <div class="mb-8">
                 <h3 class="text-lg font-bold mb-4">Active Orders</h3>
@@ -127,6 +135,20 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6" id="recentReviews">
                     <!-- Review cards will be populated here -->
                 </div>
+            </div>
+
+            <!-- Added dynamic functionality for managing menu items, orders, reviews, and settings -->
+            <div id="menu-items">
+                <!-- Dynamic menu items will be loaded here -->
+            </div>
+            <div id="orders">
+                <!-- Dynamic orders will be loaded here -->
+            </div>
+            <div id="reviews">
+                <!-- Dynamic reviews will be loaded here -->
+            </div>
+            <div id="settings">
+                <!-- Settings functionality will be implemented here -->
             </div>
         </div>
     </div>
