--- a/lib/assets/html/user-search.html
+++ b/lib/assets/html/user-search.html
@@ -151,6 +151,12 @@
         </div>
     </div>
 
+    <!-- Added dynamic restaurant display and filtering functionality -->
+    <div id="restaurant-list">
+        <!-- Dynamic restaurant listings will be shown here -->
+    </div>
+    <input type="text" id="restaurant-search" placeholder="Search for restaurants..." />
+
     <script>
         let locationManager;
         const api = new MusikaAPI();
@@ -165,11 +171,11 @@
             }
         };
 
-        // Check authentication
-        if (!localStorage.getItem('token')) {
-            const returnUrl = encodeURIComponent(window.location.href);
-            window.location.href = `login.html?return=${returnUrl}`;
-        }
+        // Removed authentication check to allow access without login
+        // if (!localStorage.getItem('token')) {
+        //     const returnUrl = encodeURIComponent(window.location.href);
+        //     window.location.href = `login.html?return=${returnUrl}`;
+        // }
 
         document.addEventListener('DOMContentLoaded', async () => {
             try {
@@ -378,7 +384,7 @@
 
                 addressesList.innerHTML = addresses.map(address => `
                     <div class="flex items-center justify-between p-3 border rounded hover:border-black cursor-pointer"
-                        onclick="selectAddress(${JSON.stringify(address).replace(/"/g, '&quot;')})">
+                        onclick="selectAddress(${JSON.stringify(address).replace(/"/g, '"')})">
                         <div>
                             <p class="font-medium">${address.name}</p>
                             <p class="text-sm text-gray-600">${address.address}</p>
